<resources>

    <string name="app_name">News Api</string>

    <string name="fragment_details_title">Details</string>

    <string name="menu_country">Country</string>
    <string name="menu_country_us">United States</string>
    <string name="menu_country_ua">Ukraine</string>
    <string name="menu_country_ca">Canada</string>

    <string name="menu_articles_number">Show maximum</string>
    <string name="menu_number_20">20 articles</string>
    <string name="menu_number_50">50 articles</string>
    <string name="menu_number_100">100 articles</string>

</resources>
