<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/menu_country"
        android:visible="true"
        app:showAsAction="never">
        <menu>
            <group
                android:id="@+id/group_country"
                android:checkableBehavior="single"
                android:enabled="true">
                <item
                    android:id="@+id/country_us"
                    android:title="@string/menu_country_us" />
                <item
                    android:id="@+id/country_ua"
                    android:title="@string/menu_country_ua" />
                <item
                    android:id="@+id/country_ca"
                    android:title="@string/menu_country_ca" />
            </group>
        </menu>
    </item>
    <item
        android:title="@string/menu_articles_number"
        android:visible="true"
        app:showAsAction="never">
        <menu>
            <group
                android:id="@+id/group_articles_number"
                android:checkableBehavior="single"
                android:enabled="true">
                <item
                    android:id="@+id/number_20"
                    android:title="@string/menu_number_20" />
                <item
                    android:id="@+id/number_50"
                    android:title="@string/menu_number_50" />
                <item
                    android:id="@+id/number_100"
                    android:title="@string/menu_number_100" />
            </group>
        </menu>
    </item>
</menu>